--- a/CoffeeShop/F_QuanLyTaiKhoan.resx
+++ b/CoffeeShop/F_QuanLyTaiKhoan.resx
@@ -117,29 +117,62 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Info" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="bunifuThinButton23.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAP8AAABJCAYAAADym/CiAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAMSSURBVHhe7dq/S+JxHMfxRjfHRjfbdGuTJmkRWgQHh/4G
+        N7caIocbgg4MDkTiCgMDl8KDguAOLhIOD+/gSwSJHYdGgUKDQ8P7en/9npfkNefn/XzAC8J+bM+v3+/H
+        5gaDgTDG7I34GTM64mfM6IifMaMjfsaMjvgZM7pX47/v9eSiVJKDdFpKiYRsRSKyPjfHGHuj00a11b1U
+        Sr4Wi3Lb6UxtW/ff+L8fHvp/qJrJyI9KRdpnZ9JvtwXA26WNaqterSa11VW/Yb0ITGv8Rfx6pahms/Jx
+        eVkeut3gTwKYRcN+378I7CaT8vvycqL1ifg1/GIsJs1yOfhVAC64qtflw+Ki3LRa0+PXd3zCB9ykjwN6
+        HvAifn3G11t9AO46zefldH39X/x6qq8HAzzjA257HA5lJx6X60ZjFL+eBuqhAAD3fSkU5DiXG8Wvnwnq
+        RwMA3NdtNv2DfT/+7WhU7jwv+BYAl+mt/0YoNIq/EA77nwcCsEH/G9CPX78AYAfxA0YRP2AU8QNGET9g
+        FPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU8QNG
+        ET9gFPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU
+        8QNGjePfCIXkcTgMXgbgunH8W5GI9Nvt4GUArhvHv5tMylW9HrwMwGV3nifb0ego/pO1NTnN54NvAXBZ
+        s1yWajY7iv+m1ZL3Cws89wMGVFZW5Nv+/ih+3aend/6zpzsAAO76UanIQTrtNz+O/77Xk1IiIb/Oz4Mf
+        A+CSh27Xv8O/7XQm49ddNxqyE4/7BwIA3KHhl5eW5OfR0bj3ifh13smJFGMx+by5GfwagFnm1Wr+O/7z
+        8HUv4tfpI8BxLudfKfRkUK8aAGbHsN/3n++rmYzspVLjW/3nmxr/3+mVQj8SeDc/7/9TAGNsNlYIh/2D
+        vYtSaWrbulfjZ4y5O+JnzOiInzGjI37GjI74GTO5gfwB2tvfyZ2qIK4AAAAASUVORK5CYII=
+</value>
   </data>
-  <data name="OpenEye" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\OpenEye.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bunifuThinButton22.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAP8AAABJCAYAAADym/CiAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAMSSURBVHhe7dq/S+JxHMfxRjfHRjfbdGuTJmkRWgQHh/4G
+        N7caIocbgg4MDkTiCgMDl8KDguAOLhIOD+/gSwSJHYdGgUKDQ8P7en/9npfkNefn/XzAC8J+bM+v3+/H
+        5gaDgTDG7I34GTM64mfM6IifMaMjfsaMjvgZM7pX47/v9eSiVJKDdFpKiYRsRSKyPjfHGHuj00a11b1U
+        Sr4Wi3Lb6UxtW/ff+L8fHvp/qJrJyI9KRdpnZ9JvtwXA26WNaqterSa11VW/Yb0ITGv8Rfx6pahms/Jx
+        eVkeut3gTwKYRcN+378I7CaT8vvycqL1ifg1/GIsJs1yOfhVAC64qtflw+Ki3LRa0+PXd3zCB9ykjwN6
+        HvAifn3G11t9AO46zefldH39X/x6qq8HAzzjA257HA5lJx6X60ZjFL+eBuqhAAD3fSkU5DiXG8Wvnwnq
+        RwMA3NdtNv2DfT/+7WhU7jwv+BYAl+mt/0YoNIq/EA77nwcCsEH/G9CPX78AYAfxA0YRP2AU8QNGET9g
+        FPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU8QNG
+        ET9gFPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU
+        8QNGjePfCIXkcTgMXgbgunH8W5GI9Nvt4GUArhvHv5tMylW9HrwMwGV3nifb0ego/pO1NTnN54NvAXBZ
+        s1yWajY7iv+m1ZL3Cws89wMGVFZW5Nv+/ih+3aend/6zpzsAAO76UanIQTrtNz+O/77Xk1IiIb/Oz4Mf
+        A+CSh27Xv8O/7XQm49ddNxqyE4/7BwIA3KHhl5eW5OfR0bj3ifh13smJFGMx+by5GfwagFnm1Wr+O/7z
+        8HUv4tfpI8BxLudfKfRkUK8aAGbHsN/3n++rmYzspVLjW/3nmxr/3+mVQj8SeDc/7/9TAGNsNlYIh/2D
+        vYtSaWrbulfjZ4y5O+JnzOiInzGjI37GjI74GTO5gfwB2tvfyZ2qIK4AAAAASUVORK5CYII=
+</value>
   </data>
-  <data name="Collapse" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Collapse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Close" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="KhoiDong" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\KhoiDong.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Minimize" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Minimize.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="CloseEye" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\CloseEye.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bunifuThinButton21.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAP8AAABJCAYAAADym/CiAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAMSSURBVHhe7dq/S+JxHMfxRjfHRjfbdGuTJmkRWgQHh/4G
+        N7caIocbgg4MDkTiCgMDl8KDguAOLhIOD+/gSwSJHYdGgUKDQ8P7en/9npfkNefn/XzAC8J+bM+v3+/H
+        5gaDgTDG7I34GTM64mfM6IifMaMjfsaMjvgZM7pX47/v9eSiVJKDdFpKiYRsRSKyPjfHGHuj00a11b1U
+        Sr4Wi3Lb6UxtW/ff+L8fHvp/qJrJyI9KRdpnZ9JvtwXA26WNaqterSa11VW/Yb0ITGv8Rfx6pahms/Jx
+        eVkeut3gTwKYRcN+378I7CaT8vvycqL1ifg1/GIsJs1yOfhVAC64qtflw+Ki3LRa0+PXd3zCB9ykjwN6
+        HvAifn3G11t9AO46zefldH39X/x6qq8HAzzjA257HA5lJx6X60ZjFL+eBuqhAAD3fSkU5DiXG8Wvnwnq
+        RwMA3NdtNv2DfT/+7WhU7jwv+BYAl+mt/0YoNIq/EA77nwcCsEH/G9CPX78AYAfxA0YRP2AU8QNGET9g
+        FPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU8QNG
+        ET9gFPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU8QNGET9gFPEDRhE/YBTxA0YRP2AU
+        8QNGjePfCIXkcTgMXgbgunH8W5GI9Nvt4GUArhvHv5tMylW9HrwMwGV3nifb0ego/pO1NTnN54NvAXBZ
+        s1yWajY7iv+m1ZL3Cws89wMGVFZW5Nv+/ih+3aend/6zpzsAAO76UanIQTrtNz+O/77Xk1IiIb/Oz4Mf
+        A+CSh27Xv8O/7XQm49ddNxqyE4/7BwIA3KHhl5eW5OfR0bj3ifh13smJFGMx+by5GfwagFnm1Wr+O/7z
+        8HUv4tfpI8BxLudfKfRkUK8aAGbHsN/3n++rmYzspVLjW/3nmxr/3+mVQj8SeDc/7/9TAGNsNlYIh/2D
+        vYtSaWrbulfjZ4y5O+JnzOiInzGjI37GjI74GTO5gfwB2tvfyZ2qIK4AAAAASUVORK5CYII=
+</value>
   </data>
 </root>
