--- a/CoffeeShop/FormAddItem.resx
+++ b/CoffeeShop/FormAddItem.resx
@@ -137,7 +137,7 @@
         wREmY+YWkN9Lh1Bk/iQTCQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="bExit.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bCancel.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOYAAABICAYAAADifIklAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAL0SURBVHhe7dotb9tgFIbhwsDAQkNDw0LDwEDD/AyzvIqy
@@ -156,7 +156,7 @@
         TeQX/3c1Nt7AqysAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="bunifuThinButton22.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bOK.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOYAAABICAYAAADifIklAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAL0SURBVHhe7dotb9tgFIbhwsDAQkNDw0LDwEDD/AyzvIqy
@@ -175,4 +175,7 @@
         TeQX/3c1Nt7AqysAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="epShowError.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
