Cập nhật tính năng bán hàng, thêm ràng buộc trường, chỉnh UI

--- a/CoffeeShop/FormSell.resx
+++ b/CoffeeShop/FormSell.resx
@@ -232,7 +232,7 @@
         1GsXXY1I14iA/SAieCMieCMieCMieCraL0UoJfeLyNhSAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btTK_QuanLy.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bMenuStaff.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAJEAAAAvCAYAAADjGCgmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAKSSURBVHhe7dzPS9NxHMfx/qJunbp16uZpdCjoMCgskEU1
